change the title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-ttl">Tùic Tac Toe</h1>
+    <h1 class="main-ttl">Tic Tac Toe</h1>
     <ul class="grid">
         <li></li>
         <li></li>
