create cells grid in js

--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
 </head>
 <body>
     <h1 class="main-ttl">Tic Tac Toe</h1>
-    <ul class="grid">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <ul class="grid" id="grid">
     </ul>
     <script type="text/javascript" src="script.js"></script>
 </body>
