display game information like player turn and game over

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 class="main-ttl">Tic Tac Toe</h1>
+    <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
     <script type="text/javascript" src="script.js"></script>
