--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
