learning big quantity of datas and adapting neural network structure

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-ttl">Tic Tac Toe</h1>
+    <h1 class="main-ttl">Tic Tac Toe (<span id="learn-count">0</span>) <button type="button" id="learn-all">Learn <span id="learn-stored">0</span></button></h1>
     <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
