display learning info on page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-ttl">Tic Tac Toe (<span id="learn-count">0</span>) <button type="button" id="learn-all">Learn <span id="learn-stored">0</span></button></h1>
+    <h1 class="main-ttl">Tic Tac Toe</h1>
+    <section class="learn">
+        <p>
+            Total: <span id="learn-count">0</span>
+        </p>
+        <p>
+            <button type="button" id="learn-all">Learn <span id="learn-stored">0</span></button>
+        </p>
+        <p class="learn-msg" id="learnMsg">
+        </p>
+    </section>
     <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
