trying to play ai VS ai

--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         <p class="learn-msg" id="learnMsg">
         </p>
     </section>
+    <section class="start-game" id="start-game">
+        <p>
+            Player 1: 
+            <select name="p1" id="p1">
+                <option value="h">human</option>
+                <option value="a">ai</option>
+            </select>
+        </p>
+        <p>
+            Player 2: 
+            <select name="p2" id="p2">
+                <option value="h">human</option>
+                <option value="a">ai</option>
+            </select>
+        </p>
+        <p>
+            <button type="button" id="start-btn">Start new game</button>
+        </p>
+    </section>
     <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
