--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </select>
         </p>
         <p>
-            <button type="button" id="start-btn">Start new game</button>
+            <button type="button" id="create-btn">Create game</button>
         </p>
     </section>
     <section class="info" id="info"></section>
