autoplay checkox for ai/ai and only one ai

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </p>
         <p>
             <button type="button" id="learn-all">Learn <span id="learn-stored">0</span></button>
+            <input type="number" name="learning-ratio" id="learning-ratio" value="60" size="3">
+            <label for="autoplay">
+                <input type="checkbox" name="autoplay" id="autoplay"> auto play
+            </label>
         </p>
         <p class="learn-msg" id="learnMsg">
         </p>
@@ -25,6 +29,7 @@
             <select name="p1" id="p1">
                 <option value="h">human</option>
                 <option value="a">ai</option>
+                <option value="r">random</option>
             </select>
         </p>
         <p>
