progress bar to see winners stats

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
     <section class="info" id="info"></section>
     <ul class="grid" id="grid">
     </ul>
+
+    <div class="progress-win">
+        <div class="progress-win-one" id="progress-0">player 1</div>
+        <div class="progress-win-equality" id="progress-eq">🟰</div>
+        <div class="progress-win-two" id="progress-1">player 2</div>
+    </div>
     <script type="module" src="js/script.js"></script>
 </body>
 </html>
