--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                 en entrée<br>
             </p>
             <article>
-                <h3>Apprentissage (<span id="learn-stored">0</span> actions stockées)</h3>
-                <p>
+                <div class="ttl-with-button">
+                    <h3>Apprentissage (<span id="learn-stored">0</span> actions stockées)</h3>
                     <button type="button" class="button" id="learn-all">Commencer l'apprentissage</button>
-                </p>
+                </div>
                 <div class="progress-learn">
                     <div class="progress-learn-value" id="progress-learn">
                         <span class="loading hidden" id="learn-spinner"></span>
@@ -112,14 +112,14 @@
                     <label for="autoplay" class="autoplay">
                         <input type="checkbox" name="autoplay" id="autoplay"> auto play
                     </label>
-                    <div class="info" id="info"></div>
+                    <div id="info"></div>
                 </article>
             </section>
 
             <ul class="grid" id="grid"></ul>
 
             <section>
-                <div class="victories-ttl">
+                <div class="ttl-with-button">
                     <h2>Victoires</h2>
                     <button type="button" class="button" id="reset-counter">reset</button>
                 </div>
@@ -137,8 +137,6 @@
         </section>
 
     </main>
-
-
 
     <script type="module" src="js/script.js"></script>
 </body>
